--- a/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/CMakeLists.txt
+++ b/src/sm/kpm_sm_v2.02/ie/kpm_data_ie/data/CMakeLists.txt
@@ -2,9 +2,13 @@ file(GLOB KPM_RIC_INFO_COMMON_SRCS *.c)
 
 set(KPM_RIC_INFO_COMMON_SRCS 
   label_info_lst.c
+  test_info_lst.c
   meas_info_frm_1_lst.c
   meas_data_lst.c
   meas_type.c
+  matching_cond_frm_3_lst.c
+  meas_info_frm_3_lst.c
+  meas_info_cond_ue_lst.c
   )
 
 add_library(kpm_ric_info_common_obj OBJECT ${KPM_RIC_INFO_COMMON_SRCS})
